tests/vertical-slice/reject/link_monitor_pending_cluster2.hew
// Value-needed monitor() remains rejected until Cluster 2 can construct
// MonitorRef from the hew_actor_monitor ref_id return.
actor Probe {
    receive fn ping() {}
}

fn monitor(_a: LocalPid<Probe>, _b: LocalPid<Probe>) -> i64 {
    0
}

fn main() -> i64 {
    let p = spawn Probe;
    let q = spawn Probe;
    let m = monitor(p, q);
    m
}
